# geoclue

./: .gitignore  .gitmodules  README
example/: Makefile.am
geoclue/: Makefile.am  configure.ac
geoclue/docs/reference/: Makefile.am
geoclue/geoclue/: Makefile.am  gc-iface-satellite.c  gc-iface-satellite.h  geoclue-marshal.list  geoclue-master-client.c  geoclue-satellite-info.h  geoclue-satellite.c  geoclue-satellite.h  geoclue-types.c
geoclue/interfaces/: Makefile.am  gc-iface-satellite-full.xml
geoclue/src/: client.c  client.h  main.c  master-provider.c  master.c  master.h
rpm/: geoclue.spec
test/: Makefile.am
